--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "backend",
+  "name": "backend-financas",
   "version": "1.0.0",
-  "description": "Backend for user management system",
+  "description": "Backend para aplicação de finanças",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "build": "npm i"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["finanças", "backend", "api"],
+  "author": "Seu Nome",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.8.0"
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.4"
   }
 }
